# pcrhpg24

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.bkp  README.md  compress_paper.sh  env_variables.sh  imgui.ini  index.html
include/: BatchDumpData.h  CudaProgram.h  Debug.h  Framebuffer.h  GLBuffer.h  GLTimerQueries.h  OpenVRHelper.h  Renderer.h  Shader.h  Texture.h  compute_basic.h  drawBoundingBoxes.h  drawBoundingBoxesIndirect.h  drawBoxes.h  drawPoints.h  huffman.h  kdtree.h  unsuck_platform_specific.cpp
modules/basic_cuda/: basic_cuda.h  helper_math.h  kernel_data.h  render.cu
modules/compute/: ComputeLasLoader.cpp  ComputeLasLoader.h  HuffmanLasLoader.cpp  HuffmanLasLoader.h  LasLoaderSparse.cpp  LasLoaderStandard.h  PotreeData.h  Resources.h  computeLasLoader.cs
modules/compute_2021_dedup/: compute_2021_dedup.h  resolve.cs
modules/compute_2021_hqs/: compute_2021_hqs.h  resolve.cs
modules/compute_loop_las2/: compute_loop_las2.h
modules/compute_loop_las_cuda/: kernel_data.h
modules/experimental/: experimental.h  kernel_data.h  render.cu
modules/huffman_cuda/: huffman_cuda.h  huffman_kernel_data.h  render.cu
modules/huffman_hqs/: depth.cu  huffman_hqs.h  huffman_kernel_data.h  render.cu  resolve.cu
modules/huffman_mem_iter_cuda/: huffman_kernel_data.h  huffman_mem_iter_cuda.h  render.cu  resolve.cu
src/: OpenVRHelper.cpp  Renderer.cpp  huffman.h  main.cpp  mymorton.h  preprocess.cpp  rahul.cpp  test_huffman.cpp
